@@ -1,6 +1,7 @@
 Revision history for Safe-Isa
 
   - comment blessed use so people who don't know perl stop trying to break it
+  - add link to lightning talk given at YAPC::NA 2013
 
 1.000004 - 2013-09-18
   - fixed slightly mangled metadata from last release
